Added files via upload

--- a/assets/main-new.scss
+++ b/assets/main-new.scss
@@ -512,8 +512,8 @@ img.bg {
 }
 @media (max-width: 250px) {
     .logo {
-        width: auto;
-        height: 50px;
+        width: 132px;
+        height: 52px;
     }
 }
 
